# FPL

./: .gitignore  README.md
.github/workflows/: weekly.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/export/: to_d1.py
backend/app/ingest/: fpl_api.py  ingest_historical.py  ingest_live.py  seed_offline.py  social.py  vaastav.py
backend/app/ml/: features.py  optimizer.py  predict.py  train.py
backend/app/services/: recommendations.py
edge/: schema.sql  wrangler.toml
edge/worker/: package-lock.json  package.json  tsconfig.json
edge/worker/src/: index.ts
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/public/: _redirects
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Card.tsx  Chips.tsx  Empty.tsx  Pitch.tsx  PlayerCard.tsx
frontend/src/hooks/: useGameweek.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: BestXI.tsx  Dashboard.tsx  Gurus.tsx  History.tsx  MyTeam.tsx  PlayerDetail.tsx  Players.tsx
frontend/src/types/: api.ts
