[project]
name = "fpl-portal-backend"
version = "0.1.0"
description = "FPL prediction portal backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "pulp>=2.8",
    "python-dateutil>=2.9",
    "youtube-transcript-api>=0.6",
    "apscheduler>=3.10",
    "tenacity>=8.2",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]
